# board-games-rust

./: Cargo.toml  run-release.sh
backend/: Cargo.toml
backend/src/: auth.rs  event_store.rs  main.rs  menu_server.rs  socket_endpoint.rs  test_server.rs  token.rs
backend_commons/: Cargo.toml
backend_commons/src/: client_info.rs  lib.rs  store.rs
docker/dev/: Dockerfile  docker-compose.yml  nginx.conf  run.sh
docker/release/: Dockerfile  docker-compose.yml
frontend_commons/: Cargo.toml
frontend_commons/src/: client_info.rs  command.rs  lib.rs  list.rs  socket.rs
frontend_commons/ts/: client_info.tsx  createElement.ts  list.tsx  socket.tsx
menu_back/: Cargo.toml
menu_back/src/: lib.rs  server_list.rs
menu_front/: .gitignore  Cargo.toml  Trunk.toml  index.html  main.ts  tsconfig.json
menu_front/src/: main.rs
test_back/: Cargo.toml
test_back/src/: board.rs  lib.rs
test_back/src/board/: common.rs  global_board.rs  local_board.rs  mod.rs
test_back/src/store/: mod.rs  serialization.rs  v1.rs
test_front/: Cargo.toml  Trunk.toml  index.html  main.ts  tsconfig.json
test_front/src/: camera.rs  image_atlas.rs  main.rs  mouse.rs  textures.rs
test_front/src/components/: canvas.rs  mod.rs  mouse.rs  paste.rs
test_front/ts/: canvas.tsx  glvector.ts  mouse.tsx  paste.tsx  shaders.ts
