[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
tokio = { version = "1.47.1", features = ["full"] }
tower-http = {version = "0.6.6", features = ["fs"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
menu_back = { path = "../menu_back" }
test_back = { path = "../test_back" }
backend_commons = { path = "../backend_commons" }
futures-util = "0.3.31"
serde_cbor = "0.11.2"
serde = "1.0.219"
rand = "0.9.2"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.9"
axum-extra = { version = "0.10.1", features = ["cookie"] }
axum-macros = "0.5.0"
